design(css): fix issue with reports modal overflowing in firefox

--- a/src/components/dashboard-report-edit-modal/styles.module.scss
+++ b/src/components/dashboard-report-edit-modal/styles.module.scss
@@ -14,6 +14,7 @@
   display: flex;
   flex-grow: 1;
   flex-shrink: 1;
+  overflow-y: hidden;
 }
 .left {
   display: flex;
